--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(learner)
 export(learner_gam)
 export(learner_glm)
 export(learner_glmnet_cv)
+export(learner_grf)
 export(learner_hal)
 export(learner_mars)
 export(learner_sl)
@@ -73,8 +74,6 @@ export(learner_xgboost)
 export(ml_model)
 export(nondom)
 export(pava)
-export(predictor_grf)
-export(predictor_grf_binary)
 export(predictor_isoreg)
 export(predictor_nb)
 export(predictor_svm)
@@ -151,6 +150,7 @@ importFrom(stats,weighted.mean)
 importFrom(stats,weights)
 importFrom(survival,survfit)
 importFrom(utils,capture.output)
+importFrom(utils,getFromNamespace)
 importFrom(utils,head)
 importFrom(utils,tail)
 useDynLib(targeted, .registration=TRUE)
